# 
#  Copyright 
# 

kppInterfacedir = @includedir@/kppInterface
kppInterface_HEADERS = \
	kppInterface/kppInterface.h \
	kppInterface/kppCommandSolvePlanner.h \
	kppInterface/kppCommandStartCorbaServer.h \
	kppInterface/kppCommandPlannerPanel.h \
	kppInterface/kppPlannerPanelController.h \
	kppInterface/kppPlannerPanel.h \
	kppInterface/kwsGraphicRoadmapDelegate.h \
	kppInterface/kwsGraphicRoadmap.h

