include $(top_srcdir)/build-aux/init.mk

# --- Distribute and install headers.
nobase_include_HEADERS =			 	\
	kppInterface/kppCommandInit.h 			\
	kppInterface/kppCommandPlannerPanel.h 		\
	kppInterface/kppCommandSetConfig.h 		\
	kppInterface/kppCommandSolvePlanner.h 		\
	kppInterface/kppCommandStartCorbaServer.h 	\
	kppInterface/kppInterface.h 			\
	kppInterface/kppPlannerPanel.h 			\
	kppInterface/kppPlannerPanelController.h 	\
	kppInterface/kwsGraphicRoadmap.h		\
	kppInterface/kwsGraphicRoadmapDelegate.h
